# widefetch

./: CMakeLists.txt  LICENSE  README.md  install-widefetch.bat  update-widefetch.bat
include/: fmt.h  logo.h  util.h
include/modules/: cpu.h  gpu.h  host.h  memory.h  os.h  uptime.h
src/: fmt.c  logo.c  main.c  util.c
src/modules/: cpu.c  gpu.c  host.c  memory.c  os.c  uptime.c
